--- a/src/css/button.css
+++ b/src/css/button.css
@@ -5,6 +5,8 @@
     background-color: #3498db;
     color: #fff;
     transition: background-color 0.3s;
+    border-radius: 10px; /* Tạo viền cong với bán kính 10px */
+
   }
   
   .login-button.light {
