--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,8 @@
 }
 
 .App-header {
+  height: 400px;
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
