update home visual

--- a/frontend/src/scss/amazon.scss
+++ b/frontend/src/scss/amazon.scss
@@ -14,11 +14,13 @@
 }
 .container1{
     width: auto;
-    background-color: antiquewhite;
+    background-color: black;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 30px;
     text-align: center;
+    color:#9fffff
+
 
 }
 .container2{
