--- a/frontend/src/scss/navbar.css
+++ b/frontend/src/scss/navbar.css
@@ -6,7 +6,7 @@
 }
 nav{
     width: 100%;
-    background-color: rgb(255, 102, 153)
+    background-color: rgb(31, 30, 30)
     ;
     top:0;
 }
@@ -20,7 +20,7 @@ nav{
 .my_shop{
     font-size: 1.5rem;
     font-weight: bold;
-    color: white;
+    color:#9fffff;
     font-family: cursive;
     cursor: pointer;
 }
