--- a/frontend/src/scss/cards.scss
+++ b/frontend/src/scss/cards.scss
@@ -10,9 +10,10 @@ section{
 .cards{
     width: 250px;
     padding: 20px;
+    // background-color: rgb(215, 249, 250);
 }
 .cards:hover{
-    box-shadow: 0 10px 10px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 10px 10px 10px rgba(34, 150, 208, 0.873);
     cursor: pointer;
 }
 .image_box img{
@@ -36,7 +37,7 @@ section{
     padding: 5px 10px;
     border: none;
     font-weight: bold;
-    background-color: skyblue;
+    background-color: rgb(39, 152, 162);
     outline: none;
     border-radius: 2px;
 }
