--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,3 +1,7 @@
+.background{
+    height: 100vh;
+}
+
 // body {
 //   margin: 0;
 //   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
