--- a/frontend/src/scss/Table.scss
+++ b/frontend/src/scss/Table.scss
@@ -2,3 +2,83 @@
     width: inherit;
     overflow-x:auto ;
 }
+/* .Account-container{
+    height: 100vh;
+    background-color: black;
+} */
+.router-title{
+    text-align: center;
+    font-size: 60px;
+    font-weight: bold;
+}
+.func-button {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .table {
+    color: #9fffff;
+  }
+  
+  .sort-header {
+    font-weight: bold;
+    color: #9fffff;
+  }
+  
+  
+  .table-hover tbody tr:hover {
+    background-color: black;
+  }
+
+.th{
+  background-color: #000;
+}
+.td{
+    color: #9fffff;
+  }
+
+.element{
+    color: #9fffff;
+}
+
+.customize-table tbody tr:nth-of-type(odd) {
+    background-color: black;
+  }
+  
+  .customize-table {
+    border-color: #000;
+  }
+td{
+    background-color: #000;
+}
+
+.customize-table {
+  color: #000;
+}
+
+.customize-table .sort-header {
+  font-weight: bold;
+  color: #000;
+}
+
+.customize-table tbody tr:nth-of-type(odd) {
+  background-color: gray;
+}
+
+.customize-table {
+  border-color: #000;
+}
+
+.customize-table th,
+.customize-table td {
+  border-color: #000;
+}
+
+.customize-table tbody tr:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.customize-table td,
+.customize-table th {
+  color: #000;
+}
