--- a/frontend/src/scss/TableAccount.css
+++ b/frontend/src/scss/TableAccount.css
@@ -2,6 +2,9 @@
     height: 100vh;
     background-color: black;
 } */
+html{
+  background-color: black;
+}
 .header{
     margin-top: 50px;
 }
@@ -9,7 +12,6 @@
     text-align: center;
     font-size: 60px;
     font-weight: bold;
-    color: yellow;
 }
 .func-button {
     display: flex;
